kube/egress/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pokeapi-egressgateway
spec:
  selector:
    app: istio-egressgateway
  servers:
    - port:
        number: 443
        name: tls
        protocol: TLS
      hosts:
        - pokeapi.co
      tls:
        mode: PASSTHROUGH
