kube/egress/service-entry.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: pokeapi
spec:
  hosts:
    - pokeapi.co
  ports:
    - number: 443
      name: tls
      protocol: TLS
  resolution: DNS
